feat(variables): extend variables endpoint with filters (#12411)
* feat(variables): extend variables endpoint with filters

* remove comment

* josh's feedback

* spotless

* small readability adjustment

* Update backend/src/it/java/org/camunda/optimize/service/db/es/retrieval/variable/ProcessVariableNameIT.java

Co-authored-by: Josh Windels <joshua.windels@camunda.com>

* Update backend/src/it/java/org/camunda/optimize/service/db/es/retrieval/variable/ProcessVariableNameIT.java

Co-authored-by: Josh Windels <joshua.windels@camunda.com>

* josh's feedback - wip

* josh's feedback 2 - wip

* josh's feedback 3 - wip

* adjusting last IT

* spotless

* feat(variables api): update FE calls to updated endpoint (#12526)

* feat(variables api): update FE calls to updated endpoint

related to #12415

* add missing filter

---------

Co-authored-by: Josh Windels <joshua.windels@camunda.com>
Co-authored-by: Michał Konopski <58469680+misiekhardcore@users.noreply.github.com>